tests/errors/int_lit_overflow.c
void foo()
    //@ requires true;
    //@ ensures 0 <= UINT_MAX;
{
}
